--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "git": "^0.1.5",
     "npm-git-install": "^0.3.0",
     "react": "^17.0.2",
@@ -41,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5000/"
+  "proxy": "http://localhost:5000/"
 }
