--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     },
     "dependencies": {
         "body-parser": "^1.19.1",
-        "express": "^4.17.2"
+        "express": "^4.17.2",
+        "mysql": "^2.18.1"
     },
     "devDependencies": {
         "concurrently": "^7.0.0",
