--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
+        "@mui/icons-material": "^5.2.5",
         "body-parser": "^1.19.1",
         "express": "^4.17.2",
         "multer": "^1.4.4",
